# panelfordatapps

./: .gitignore  README.md  panel_getting_started.ipynb  panel_getting_started.py  setup.cfg
src/: hvplot_example.py
tasks/: __init__.py
