[metadata]
name = panel-data-apps
version = 0.0.1
description = A package associated with the blog post I prefer to use Panel for my data apps. Here is why.
long_description = file: README.md
keywords = Python, Data Apps, Analysis, Engineering, Science, Data Engineering, Data Science, Machine Learning
license = MIT
classifiers =
    Framework :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    panel
    Pillow
    imageio
    pandas
    matplotlib
    hvplot

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3